--- a/android-prediction-yelp-demo/app/src/main/res/drawable/shape.xml
+++ b/android-prediction-yelp-demo/app/src/main/res/drawable/shape.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item >
-        <shape
-            android:shape="rectangle">
-            <solid android:color="@android:color/darker_gray" />
-            <corners android:radius="10dp"/>
-        </shape>
-    </item>
+
     <item>
         <shape
             android:shape="rectangle">
-            <solid android:color="#fff"/>
+            <solid android:color="@color/light_grey"/>
             <corners android:radius="10dp"/>
+            <stroke
+                android:width="1dp"
+                android:color="#ccc" />
         </shape>
     </item>
 </layer-list>
